--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My First Webpage</title>
 </head>
 <body>
-    <h1>Web Page</h1>
+    <h1>Welcome to My First Webpage</h1>
+    <p>This is my first webpage, and I'm excited to learn more about HTML.</p>
+    <p>In this webpage, I will be sharing information about my hobbies and interests.</p>
+
+    <img src="./images/burgir.jpg" alt="An image">
+    <p>Check out my <a href="https://www.google.com">blog</a> for more information.</p>
 </body>
 </html>
