--- a/index.html
+++ b/index.html
@@ -5,13 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Webpage</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    <h1>Welcome to My First Webpage</h1>
-    <p>This is my first webpage, and I'm excited to learn more about HTML.</p>
-    <p>In this webpage, I will be sharing information about my hobbies and interests.</p>
-
-    <img src="./images/burgir.jpg" alt="An image">
-    <p>Check out my <a href="https://www.google.com">blog</a> for more information.</p>
+    
 </body>
 </html>
